2004-11-03 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * /binary_write/ gdcm source. Now even on big endian we are writting
    little endian. This should -heopfully- fix some tests

2004-11-03 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Now the dictionary is compiled into gdcm lib. This is a default 
    behavior, thus any dic file specified is picked before failback to 
    the one comiled into lib

2004-10-27 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Change internals for gdcmDict. Don't use any 'new' any more.
    This should definitely solve any leak problem, and we should be
    as fast as before, as long as don't modify too much the dictionary.

2004-10-25 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * STYLE: ivars should start with a capital letter. 
  * Accessors should be const to avoid people starting modifying stuff (since this is a ref). 
  * remove 'virtual' as Style specify subclasses shouldn't reuse the keyword
  
2004-10-22 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Doc/Dicom2004_Part5.pdf added (thanks to JPR).
  * Dicts/dicomTS2004.dic, dicomV3VM2004.dic, groupNameAbbreviations2004.dic
    new 2004 dictionaries added (thanks to JPR).
  * FIX dashboard warning RLEFrame::NumberFragments is now of type unsigned int
  * CLEANUP_ROUND (15) for gdcmPixelConvert
    - RLEFrame::NumberFragments is now of type unsigned int
    - gdcmFile::GetImageData(), GetImageDataIntoVector(), GetImageDataRaw()
      are now all based on PixelConverter. ::GetImageDataIntoVectorRaw()
      no longer exists.

2004-10-21 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Initial work in gathering all transfer syntax accessors. clearly 
   IsDecompressed/IsJPEG2000/IsJPEGLossless/IsRLELossless shouldn't be all 
   ivars, but only one transfersyntax (class) ivar with equivalent method on 
   the class.
  
2004-10-21 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>