@@ -81,3 +81,4 @@ imageElem   0028 0011 "0"                    // Columns
 imageElem   0028 0030 "1.0\1.0 "             // Pixel Spacing
 imageElem   0050 0004 "0"                    // Calibration Image
 imageElem   fffe e00d ""                     // Item delimitation : length to be set to ZERO later
+
